# discordbot-with-claude

./: .gitignore  LICENSE.txt  README.md  constants.py  main.py  pyproject.toml
src/discordbot/: __init__.py
